--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   intl: ^0.20.2
   flutter_svg: ^2.0.17
   path_provider: ^2.1.5
+  sqflite: ^2.4.2
 
 dev_dependencies:
   flutter_test:
@@ -66,6 +67,10 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/weather_icons/
+    - assets/sql/create.sql
+    - assets/sql/insert.sql
+    - assets/sql/get_all.sql
+    - assets/sql/delete.sql
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
